添加example和readme修改

--- a/golang/example/Makefile
+++ b/golang/example/Makefile
@@ -1,6 +1,8 @@
 .PHONY : all build run
-all: build run
-build:
+all: build run ## 启动项目
+build: ## 编译镜像
 	docker build -t go-example:latest .
-run:
+run: ## 启动镜像
 	docker run --rm -it -p 8080:8080 go-example:latest
+help: ## 帮助
+	@awk 'BEGIN {FS = ":.*?## "} /^[a-zA-Z_-]+:.*?## / {sub("\\\\n",sprintf("\n%22c"," "), $$2);printf " \033[36m%-20s\033[0m  %s\n", $$1, $$2}' $(MAKEFILE_LIST)	
